# airflow-data-aware-scheduling

./: .gitignore  README.md  pyproject.toml
dags/: data_aware_analyzer_app_dag.py  data_aware_batch_ingestion_dag.py  data_aware_stream_ingestion_dag.py
